fix : stretch header value width

--- a/src/views/Run/internal/Configuration/internal/HeadersConfiguration/internal/headers-configuration.module.scss
+++ b/src/views/Run/internal/Configuration/internal/HeadersConfiguration/internal/headers-configuration.module.scss
@@ -1,7 +1,12 @@
 @use '../../../../../../../style//mixins/anims.scss';
 
 .header-configuration {
+  &__header-wrapper {
+    align-self: stretch;
+  }
+
   &__header {
+    flex: 1;
     @include anims.slideIn;
   }
 
